[package]
name = "infinity"
version = "0.2.2-alpha0"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]

description = "A rust wrapper for Infinity, a lightweight RDMA library for InfiniBand"
repository = "https://github.com/utaal/infinity-rust"

license = "MIT"

build = "build.rs"
links = "infinity"

[dependencies]

[build-dependencies]
bindgen = "0.36"
